--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mysql2": "^3.3.1",
+    "react": "17.0.2",
     "sequelize": "^6.31.1"
   },
   "devDependencies": {
